feat: signup fetch api

--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup | Petrasche</title>
+    
+    <!------CSS---------->
     <link rel="stylesheet" type="text/css" href="./static/css/login.css">
+    <!------JS---------->
+    <script src="./static/js/api.js"></script>
 
 </head>
 <body>
@@ -39,6 +43,12 @@
             </div>
         </div>
 
-    </div>    
+    </div>  
+    
+    <script>
+
+    </script>
+
+
 </body>
 </html>
