--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login | Petrasche</title>
-    
+
     <!------CSS---------->
     <link rel="stylesheet" type="text/css" href="./static/css/login.css">
     <!------JS---------->
@@ -30,7 +30,7 @@
                 <button class="login-button" type="button" onclick="handleLogin()">로그인</button>
             </div>
             <div>
-                <a>계정이 없으신가요? 회원가입</a>
+                <a href="/signup.html">계정이 없으신가요? 회원가입</a>
             </div>
 
 
