--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup | Petrasche</title>
-    
+
     <!------CSS---------->
     <link rel="stylesheet" type="text/css" href="./static/css/login.css">
     <!------JS---------->
@@ -39,7 +39,7 @@
                 <button class="login-button" type="button" onclick="handleSignup()">회원가입</button>
             </div>
             <div>
-                <a>계정이 있으신가요? 로그인</a>
+                <a href="/login.html">계정이 있으신가요? 로그인</a>
             </div>
         </div>
 
