--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
             </div>
             <div style="width:100%; height: 25px"></div>
             <div class="login-inner">
-                <input type="input" class="form-control" placeholder="password" name="password" id='password'  required />
+                <input type="password" class="form-control" placeholder="password" name="password" id='password'  required />
             </div>
             <div style="width:100%; height: 100px"></div>
             <div class="login-inner">
