--- a/signup.html
+++ b/signup.html
@@ -27,11 +27,11 @@
             </div>
             <div style="width:100%; height: 20px"></div>
             <div class="login-inner">
-                <input type="input" class="form-control" placeholder="password" name="password" id='password'  required />
+                <input type="password" class="form-control" placeholder="password" name="password" id='password'  required />
             </div>
             <div style="width:100%; height: 20px"></div>
             <div class="login-inner">
-                <input type="input" class="form-control" placeholder="password2" name="password2" id='password2'  required />
+                <input type="password" class="form-control" placeholder="password2" name="password2" id='password2'  required />
             </div>
 
             <div style="width:100%; height: 50px">1/2</div>
@@ -42,13 +42,8 @@
                 <a href="/login.html">계정이 있으신가요? 로그인</a>
             </div>
         </div>
-
     </div>  
-    
     <script>
-
     </script>
-
-
 </body>
 </html>
