--- a/signup2.html
+++ b/signup2.html
@@ -38,17 +38,31 @@
 
             </div>
             <div id="sign-in-2nd-page" style="display:none">
-                <div class="login-inner" >
-                    <input type="input" class="form-control" placeholder="birthday" name="birthday" id='birthday'  required />
-                </div>
+                <label for="birthday" style="justify-content: center;display: flex;" >birthday</label>
                 <div style="width:100%; height: 20px"></div>
                 <div class="login-inner" >
-                    <select id="gender1" name="gender1" class="form-control" >
+                    
+                    <input type="date" placeholder="birthday" name="birthday" id='birthday'  required />
+                </div>
+                <div style="width:100%; height: 20px"></div>
+                <label for="gender" style="justify-content: center;display: flex;">gender</label>
+                <div style="width:100%; height: 20px"></div>
+                <div class="login-inner" >
+                    <select id="gender" name="gender" class="form-control" >
+                        <option disabled selected value>select gender</option>
                         <option value="woman">Woman</option>
                         <option value="Man">Man</option>                        
                     </select>
 
                 </div>
+                <div style="width:100%; height: 20px"></div>
+                <div style="justify-content: center;display: flex;">
+                    <label for="공개 여부">공개 여부</label>
+                    <input id="is_active" type="checkbox" name="공개여부" checked="true" value="true">
+                    <input id="is_active_hidden" type="hidden" name="공개여부" value="false">
+
+                </div>
+
 
                 <div style="width:100%; height: 50px">2/2</div>
             </div>
