fix 레이아웃 css 모달창 스크롤

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
-    <div class="load_img">
-        <img src="/static/load_img/icon-1s-200px.gif" alt="" srcset="">
+    <div id="now_loading" class="load_img">
+        <img src="static\load_img\icon-1s-351px.gif" alt="" srcset="">
     </div>
     <!-- 상세 모달 -->
     <div id="modal_box" class="modal_box">
@@ -21,17 +21,17 @@
             <div id="modal_desc" class="modal_desc">
 
             </div>
-            <div id="modal_info_btn" onclick="modal_desc_info()" class="modal_info_btn">
+            <!-- <div id="modal_info_btn" onclick="modal_desc_info()" class="modal_info_btn">
                 상세 페이지
-            </div>
+            </div> -->
             <div id="modal_info_colse_btn" onclick="modal_close()" class="modal_close">
                 페이지 닫기
             </div>
-            <div class="modal_profile">
+            <!-- <div class="modal_profile">
                 <img src="https://image.genie.co.kr/Y/IMAGE/IMG_ALBUM/081/867/444/81867444_1616662460652_1_600x600.JPG"
                     alt="">
                 <div class="modal_profile_account">우리 아지매</div>
-            </div>
+            </div> -->
             <div class="modal_like">
                 <i class="fa-solid fa-heart"></i>
                 <div style="margin-left: 5px;">999</div>
