fix - 레이아웃 사진 슬라이드 추가중....

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- 상세 모달 -->
     <div id="modal_box" class="modal_box">
         <div class="modal_content">
-            <img src="https://cdn.pixabay.com/photo/2019/07/30/05/53/dog-4372036__480.jpg" alt="">
+            <img id="modal_box_img" src="https://cdn.pixabay.com/photo/2019/07/30/05/53/dog-4372036__480.jpg" alt="">
             <div id="modal_desc" class="modal_desc">
 
             </div>
@@ -32,7 +32,7 @@
                     alt="">
                 <div class="modal_profile_account">우리 아지매</div>
             </div> -->
-            <div class="modal_like">
+            <div onclick="image_slider()" class="modal_like">
                 <i class="fa-solid fa-heart"></i>
                 <div style="margin-left: 5px;">999</div>
             </div>
