fix 회원가입 안되는 오류 수정, 변수명 back과 일치하도록 변경

--- a/signup.html
+++ b/signup.html
@@ -50,8 +50,8 @@
                 <div class="login-inner" >
                     <select id="gender" name="gender" class="form-control" >
                         <option disabled selected value>select gender</option>
-                        <option value="woman">Woman</option>
-                        <option value="Man">Man</option>                        
+                        <option value="2">Woman</option>
+                        <option value="1">Man</option>                        
                     </select>
 
                 </div>
