--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <script src="./static/js/api.js"></script>
 
 </head>
+
 <body>
     <div class="wrapper">
         <div class="login-box">
@@ -19,11 +21,12 @@
                 <h1>Petrasche</h1>
             </div>
             <div class="login-inner">
-                <input type="input" class="form-control" placeholder="email" name="email" id='email'  required />
+                <input type="input" class="form-control" placeholder="email" name="email" id='email' required />
             </div>
             <div style="width:100%; height: 25px"></div>
             <div class="login-inner">
-                <input type="password" class="form-control" placeholder="password" name="password" id='password'  required />
+                <input type="password" class="form-control" placeholder="password" name="password" id='password'
+                    required />
             </div>
             <div style="width:100%; height: 100px"></div>
             <div class="login-inner">
@@ -38,7 +41,8 @@
         </div>
 
     </div>
-    <script>            
-    </script>    
+    <script>
+    </script>
 </body>
+
 </html>
