feat: 프로필 변경 UI(진행중)

--- a/mypage.html
+++ b/mypage.html
@@ -38,19 +38,42 @@
                 <div class="user_button_box">
                     <div class="menu_change_button_box">
                         <button id="menu_change_button" type="button" onclick="changeButton()">
-                            회원정보
+                            프로필 변경
                         </button>
                     </div>
                 </div>
             </div>
             <div class="show_container">
                 <div class="show_box">
+                    <!-- 게시물 메뉴 -->
                     <div id="article_box" class="article_box">
                     </div>
-                    <div class="user_info_box">
+                    <!-- 프로필 변경 메뉴 -->
+                    <div id="user_info_box" class="user_info_box">
+                        <div class="user_profile_section">
+                            <div class="user_profile_box">
+                            </div>
+                        </div>
+                        <div class="pet_profile_section">
+                            <div class="pet_profile_card">
+                                <div class="pet_img">
+                                    <img src="" />
+                                </div>
+                            </div>
+                            <div class="pet_profile_card">
+                                <div class="pet_img">
+                                    <img src="" />
+                                </div>
+                            </div>
+                            <div class="pet_profile_card">
+                                <div class="pet_img">
+                                    <img src="" />
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="pet_select_box">
+                <div id="pet_select_box" class="pet_select_box">
                     <div class="pet_botton_box">
                         <div class="pet_button">
                             김덕구
