--- a/index.html
+++ b/index.html
@@ -17,24 +17,80 @@
     <!-- 상세 모달 -->
     <div id="modal_box" class="modal_box">
         <div class="modal_content">
-            <img id="modal_box_img" src="https://cdn.pixabay.com/photo/2019/07/30/05/53/dog-4372036__480.jpg" alt="">
+            <img id="modal_box_img" src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg"
+                alt="">
             <div id="modal_desc" class="modal_desc">
+                <div class="modal_user_profile">
+                    <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt=""
+                        srcset="">
+                    <div>강아지 사육사</div>
+                </div>
+                <div id="modal_content_list" class="modal_content_list">
+                    <div>
+                        앞집 사는 개이름<br>
+                        빙고라지요 오<br>
+                        B i n g o<br>
+                        비 아이 엔 쥐 오<br>
+                        B i n g o<br>
+                        비 아이 엔 쥐 오<br>
+                        B i n g o<br>
+                        비 아이 엔 쥐 오<br>
 
-            </div>
-            <!-- <div id="modal_info_btn" onclick="modal_desc_info()" class="modal_info_btn">
-                상세 페이지
-            </div> -->
-            <div id="modal_info_colse_btn" onclick="modal_close()" class="modal_close">
-                페이지 닫기
-            </div>
-            <!-- <div class="modal_profile">
-                <img src="https://image.genie.co.kr/Y/IMAGE/IMG_ALBUM/081/867/444/81867444_1616662460652_1_600x600.JPG"
-                    alt="">
-                <div class="modal_profile_account">우리 아지매</div>
-            </div> -->
-            <div onclick="image_slider()" class="modal_like">
-                <i class="fa-solid fa-heart"></i>
-                <div style="margin-left: 5px;">999</div>
+                    </div>
+                </div>
+                <div class="modal_comment_list">
+
+                    <div class="modal_comment_text">
+                        <div class="balloon_03">
+                            <div>
+                                강아지 정말 이쁩니다.
+                            </div>
+                        </div>
+                        <div class="modal_comment_user">강아지 사육사 <span>1일전</span></div>
+                    </div>
+
+                    <div class="modal_comment_text">
+                        <div class="balloon_03">
+                            <div>
+                                강아지 너무 맛있게 생겼......아닙니다......
+                            </div>
+                        </div>
+                        <div class="modal_comment_user">강아지 사육사 <span>1일전</span></div>
+                    </div>
+
+                    <div class="modal_comment_text">
+                        <div class="balloon_03">
+                            <div>
+                                저도 동네 친구라서 같이 애견 카페 가보고 싶네요. 시간 되시면 DM주세요.
+                            </div>
+                        </div>
+                        <div class="modal_comment_user">강아지 사육사 <span>1일전</span></div>
+                    </div>
+
+                    <div class="modal_comment_text">
+                        <div class="balloon_03">
+                            <div>
+                                나비야, 나비야 이리 날아오너라<br>
+                                노랑나비, 흰 나비 춤을 추며 오너라<br>
+                                봄바람에 꽃잎도 방긋방긋 웃으며<br>
+                                참새도 짹짹짹 노래하며 춤춘다<br>
+                                봄바람에 꽃잎도 방긋방긋 웃으며<br>
+                                참새도 짹짹짹 노래하며 춤춘다<br>
+                                나비야, 나비야 이리 날아오너라<br>
+                                노랑나비, 흰 나비 춤을 추며 오너라<br>
+                                나비야, 나비야 이리 날아오너라<br>
+                                노랑나비, 흰 나비 춤을 추며 오너라
+                            </div>
+                        </div>
+                        <div class="modal_comment_user">강아지 사육사 <span>1일전</span></div>
+                    </div>
+
+
+                </div>
+                <div class="modal_comment_input">
+                    <textarea name="" id="" placeholder="댓글....."></textarea>
+                    <div class="modal_comment_submit">전송</div>
+                </div>
             </div>
         </div>
     </div>
