--- a/mypage.html
+++ b/mypage.html
@@ -13,6 +13,12 @@
     <!------JS---------->
     <script src="./static/js/api.js"></script>
     <script src="./static/js/mypage.js"></script>
+
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap" rel="stylesheet">
+    <script src="https://use.fortawesome.com/99966411.js"></script>
+    <style>
+
+    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -46,7 +52,8 @@
             <div class="show_container">
                 <div class="show_box">
                     <!-- 게시물 메뉴 -->
-                    <div id="article_box" class="article_box">
+                    <div id="article_box" class="article_box" style="background-color:pink; width:100%; height:100%">
+
                     </div>
                     <!-- 프로필 변경 메뉴 -->
                     <div id="user_info_box" class="user_info_box">
