add 모달 페이지 통신

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
                 </div>
                 <div class="modal_comment_input">
-                    <textarea name="" id="" placeholder="댓글....."></textarea>
-                    <div class="modal_comment_submit">전송</div>
+                    <textarea id="modal_comment_text" name="" id="" placeholder="댓글....."></textarea>
+                    <div id="modal_comment_submit" class="modal_comment_submit">전송</div>
                 </div>
             </div>
         </div>
