add 댓글 불러오기

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div>강아지 사육사</div>
                 </div>
                 <div id="modal_content_list" class="modal_content_list">
-                    <div>
+                    <div id="modal_content_text">
                         앞집 사는 개이름<br>
                         빙고라지요 오<br>
                         B i n g o<br>
