Edit 댓글 불러오기 수정

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     </div>
                 </div>
-                <div class="modal_comment_list">
+                <div class="modal_comment_list" id="modal_comment_list">
 
                     <div class="modal_comment_text">
                         <div class="balloon_03">
