--- a/mypage.html
+++ b/mypage.html
@@ -240,5 +240,13 @@
                     </div>
                     <div class="modal_comment_user">강아지 사육사 <span>1일전</span></div>
                 </div>
+            </div>
+            <div class="modal_comment_input">
+                <textarea id="modal_comment_text" name="" id="" placeholder="댓글....."></textarea>
+                <div id="modal_comment_submit" class="modal_comment_submit">전송</div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
