--- a/mypage.html
+++ b/mypage.html
@@ -194,8 +194,8 @@
 
                 </div>
             </div>
-            <div class="modal_comment_list">
-
+            <div id="mypage_modal_comment_list" class="modal_comment_list">
+<!-- 
                 <div class="modal_comment_text">
                     <div class="balloon_03">
                         <div>
@@ -239,7 +239,7 @@
                         </div>
                     </div>
                     <div class="modal_comment_user">강아지 사육사 <span>1일전</span></div>
-                </div>
+                </div> -->
             </div>
             <div class="modal_comment_input">
                 <textarea id="modal_comment_text" name="" id="" placeholder="댓글....."></textarea>
