add 이미지 리스트 마우스오버 정보, 댓글 등록 레이아웃 수정

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="modal_comment_user">강아지 사육사 <span>1일전</span></div>
                     </div>
                 </div>
-                <div class="modal_comment_input">
+                <div id="modal_comment_input" class="modal_comment_input">
                     <textarea id="modal_comment_text" name="" id="" placeholder="댓글....."></textarea>
                     <div id="modal_comment_submit" class="modal_comment_submit">전송</div>
                 </div>
@@ -85,7 +85,6 @@
         </div>
     </div>
     <!--  -->
-
 
     <!-- 업로드 모달 -->
     <div id="upload_modal" class="upload_modal">
