--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="like_icon_off" class="like_icon_off"><i class="fa-regular fa-heart"></i><span> 45</span></div>
             <div id="heart_ani" class="heart_ani"><i class="fa-solid fa-heart"></i></div>
             <div id="modal_desc" class="modal_desc">
-                <div id="article_delete" class="article_delete"><i class="fa-solid fa-trash-can-arrow-up"></i></div>
+                <div id="article_delete" class="article_delete"><i class="fa-solid fa-trash"></i></div>
                 <div class="modal_user_profile">
                     <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt=""
                         srcset="">
