--- a/mypage.html
+++ b/mypage.html
@@ -46,7 +46,7 @@
                 <div class="user_box">
                     <div class="user_profile">
                         <div class="user_img_box">
-                            <img src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
+                            <img id="user_profile_img" src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
                         </div>
                         <div class="user_id_box">
                             <span class="user_id" id="user_id">
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="user_introduction">
-                        <div class="introduction">
+                        <div id="introduction" class="introduction">
                             안녕하세요 김고은입니다.
                         </div>
                     </div>
@@ -71,11 +71,11 @@
             <div class="show_container">
                 <div class="show_box">
                     <!-- 내 전체 게시물 메뉴 -->
-                    <div id="article_box" class="article_box" style="background-color:pink; width:100%; height:100%">
+                    <div id="article_box" class="article_box" >
 
                     </div>
                     <!-- 좋아요 메뉴 -->
-                    <div id="like_article_box" class="like_article_box" style="background-color:rgb(192, 193, 255); width:100%; height:100%;display:none">
+                    <div id="like_article_box" class="like_article_box" >
 
                     </div>
                     <!-- 프로필 변경 메뉴 -->
