fix 마이페이지 div 절대값으로 수정

--- a/mypage.html
+++ b/mypage.html
@@ -71,13 +71,19 @@
             <div class="show_container">
                 <div class="show_box">
                     <!-- 내 전체 게시물 메뉴 -->
-                    <div id="article_box" class="article_box" >
-
+                    <div id ="article_box_wrapper" style="background-color:white; padding:23px;border-radius: 8px;display: flex;">
+                        <div id="article_box" class="article_box" style="display:flex" >
+                        </div>
                     </div>
+                    
                     <!-- 좋아요 메뉴 -->
-                    <div id="like_article_box" class="like_article_box" >
+                    <div id="like_article_box_wrapper" style="background-color:white; padding:23px;border-radius: 8px;display:none;">
+                        
+                        <div id="like_article_box" class="like_article_box" >
 
+                        </div>
                     </div>
+
                     <!-- 프로필 변경 메뉴 -->
                     <div id="user_info_box" class="user_info_box">
                         <div id="user_profile_section" class="user_profile_section">
