프로필 버튼 색깔 수정

--- a/mypage.html
+++ b/mypage.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="user_button_box">
                     <div class="menu_change_button_box">
-                        <button id="menu_change_button" type="button" onclick="changeButton()">
+                        <button id="menu_change_button" class="menu_change_button" type="button" onclick="changeButton()">
                             프로필 변경
                         </button>
                     </div>
