--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <div id="now_loading" class="load_img">
         <img src="static\load_img\icon-1s-351px.gif" alt="" srcset="">
     </div>
+    <div id="modal_edit_box" class="modal_edit_box">
+        <div class="modal_edit_box_input"><textarea id="modal_edit_text" rows="5" cols="50"
+                placeholder="내용....."></textarea>
+            <button id="modal_edit_button" class="modal_edit_button">수정</button>
+            <button onclick="modal_edit_cancel()" id="modal_edit_cancel" class="modal_edit_cancel">취소</button>
+        </div>
+    </div>
     <!-- 상세 모달 -->
     <div id="modal_box" class="modal_box">
         <div class="modal_content">
@@ -24,6 +31,7 @@
             <div id="heart_ani" class="heart_ani"><i class="fa-solid fa-heart"></i></div>
             <div id="modal_desc" class="modal_desc">
                 <div id="article_delete" class="article_delete"><i class="fa-solid fa-trash"></i></div>
+                <div id="article_edit" class="article_edit"><i class="fa-solid fa-pen-to-square"></i></div>
                 <div class="modal_user_profile">
                     <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt=""
                         srcset="">
@@ -33,6 +41,7 @@
                     <div id="modal_content_text">
 
                     </div>
+
                 </div>
                 <div class="modal_comment_list" id="modal_comment_list">
 
