--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
     <!-- 상세 모달 -->
     <div id="modal_box" class="modal_box">
         <div class="modal_content">
-            <img id="modal_box_img" src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg"
-                alt="">
+            <div class="modal_img_box">
+                <img id="modal_box_img"
+                    src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt="">
+                <div id="slide_left" class="slide_left"><i class="fa-solid fa-caret-left"></i></div>
+                <div id="slide_right" class="slide_right"><i class="fa-solid fa-caret-right"></i></div>
+                <div id="like_user_list" class="like_user_list">
+                    <!-- <h4>좋아요 없음.</h4> -->
+                    <div>일이삼사오육칠팔</div>
+                    <div>2번 유저!</div>
+                    <div>3번 유저!</div>
+                    <div>4번 유저!</div>
+                    <div>5번 유저!</div>
+                </div>
+            </div>
+
             <div id="like_icon_on" class="like_icon_on"><i class="fa-solid fa-heart"></i><span> 45</span></div>
             <div id="like_icon_off" class="like_icon_off"><i class="fa-regular fa-heart"></i><span> 45</span></div>
             <div id="heart_ani" class="heart_ani"><i class="fa-solid fa-heart"></i></div>
