--- a/mypage.html
+++ b/mypage.html
@@ -21,17 +21,17 @@
 <body>
     <div class="wrapper">
         <div class="left_menu">
-            <div class="menu_dog" id="menu_like" onclick="showMyArticle()">
+            <div class="menu_dog" id="menu_like" onclick="loadMyArticle()">
                 <img src="https://cdn-icons-png.flaticon.com/512/2754/2754652.png" alt="">
                 나의 글
             </div>
 
-            <div class="menu_cat" id="menu_" onclick="showUserInfo()">
+            <div class="menu_cat" id="menu_" onclick="loadUserInfo()">
                 <img src="https://cdn-icons-png.flaticon.com/512/4445/4445870.png" alt="">
                 프로필
             </div>
 
-            <div class="menu_like" id="menu_like" onclick="showLike()">
+            <div class="menu_like" id="menu_like" onclick="loadLikeArticle()">
                 <img src="https://cdn-icons-png.flaticon.com/512/452/452823.png" alt="">
                 좋아요
             </div>
@@ -69,88 +69,22 @@
                 </div>
             </div>
             <div class="show_container">
-                <div class="show_box">
+                <div id="show_box" class="show_box">
                     <!-- 내 전체 게시물 메뉴 -->
-                    <div id ="article_box_wrapper" style="background-color:white; padding:23px;border-radius: 8px;display: flex;">
+                    <div id ="article_box_wrapper">
                         <div id="article_box" class="article_box" style="display:flex" >
                         </div>
                     </div>
                     
                     <!-- 좋아요 메뉴 -->
-                    <div id="like_article_box_wrapper" style="background-color:white; padding:23px;border-radius: 8px;display:none;">
-                        
+                    <div id="like_article_box_wrapper">
                         <div id="like_article_box" class="like_article_box" >
-
                         </div>
                     </div>
 
                     <!-- 프로필 변경 메뉴 -->
                     <div id="user_info_box" class="user_info_box">
                         <div id="user_profile_section" class="user_profile_section">
-                            <!-- <div class="user_profile_box">
-                                <div class="user_profile_item">
-                                    <p>비밀번호</p>
-                                    <button type="button" onclick="">변경</button>
-                                </div>
-                                <div class="user_profile_item">
-                                    <p>이메일</p>
-                                    <input id="user_profile_email" type="email" value="" style="width: 80px;" />
-                                    <span>@</span>
-                                    <input id="user_profile_domain" type="email" value="" style="width: 80px;" />
-                                    <select name="language" >
-                                        <option value="none">이메일</option>
-                                        <option value="gmail">gmail.com</option>
-                                        <option value="naver">naver.com</option>
-                                        <option value="daum">hanmail.net</option>
-                                        <option value="self">직접 입력</option>
-                                    </select>
-                                </div>
-                                <div class="user_profile_item">
-                                    <p>연락처</p>
-                                    <input id="user_profile_phone" type="text" value=""/>
-                                    <button type="button" onclick="">변경</button>
-                                </div>
-                                <div class="user_profile_item">
-                                    <p>생년월일</p>
-                                    <input id="user_profile_birthday" type="date"  value=""/>
-                                </div>
-                                <div class="user_profile_item">
-                                    <p>성별</p>
-                                    <input type="radio" id="gender" name="gender" value="여성">
-                                    <label for="여성">여성</label>
-                                    <input type="radio" id="gender" name="gender" value="남성">
-                                    <label for="남성">남성</label>
-                                    <input type="radio" id="gender" name="gender" value="모름">
-                                    <label for="모름">모름</label>
-                                    <input type="" value="남성"/>
-                                </div>
-                            </div> -->
-                        </div>
-                        <div id="pet_profile_section" class="pet_profile_section">
-                            <!-- <div class="pet_profile_card">
-                                <div class="pet_img">
-                                    <img src="" />
-                                </div>
-                                <div class="pet_name">
-                                    <p>김덕구</p>
-                                </div>
-                            </div>
-                            <div class="pet_profile_card">
-                                <div class="pet_img">
-                                    <img src="" />
-                                </div>
-                                <div class="pet_name">
-                                    <p></p>
-                                </div>
-                            </div>
-                            <div class="pet_profile_card">
-                                <div class="pet_img">
-                                    <img src="" />
-                                </div>
-                                <div class="pet_name">
-                                    <p></p>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                 </div>
